@@ -12,6 +12,8 @@ Revision 0.4.2, released XX-XX-2022
 - Added RFC9323 providing RPKI Signed Checklist (RSC)
 - Added RFC9336 providing Extended Key Usage (EKU) for Document Signing
 - Added RFC9337 providing GOST Algorithms with PKCS#5
+- Correct typo in a comment in RFC8708
+- Added RFC9310 providing 5G NF Types certificate extension
 
 Revision 0.4.1, released 16-02-2022
 -----------------------------------
